syntax = "proto3";
import "common.proto";
package manager_net;

service ManagerService {
  rpc AppendTransact(AppendTransactRequest) returns (common_decls.Empty);
  rpc ExecNotif(common_decls.ExecNotifRequest) returns (common_decls.Empty);
  rpc ExecAppendTransact(ExecAppendTransactRequest) returns (common_decls.Empty);
  rpc ReadOnlyTransact(ReadOnlyTransactRequest) returns (common_decls.Empty);
}

message AppendTransactRequest {
  map<string, common_decls.TransactionOp> txn = 1;
  common_decls.Csn csn = 2;
  uint64 ackBound = 3;
  uint64 ind = 4;
  string addr = 5;
}

message ExecAppendTransactRequest {
  uint64 ind = 1;
  optional common_decls.TxnRes res = 2;
}

message ReadOnlyTransactRequest {
  repeated string keys = 1;
  bool isRetry = 2;
  common_decls.Csn csn = 3;
  repeated string writeDeps = 4;
  uint64 lsnConst = 5;
}
